# Bomj-Api

./: .gitignore  hello.py  pyproject.toml
app/: main.py
app/api/: packs.py
app/models/: dto.py
app/services/: r2_uploader.py  supabase_client.py
app/utils/: content_type.py
